Bloco 7.1 JS ES6

--- a/exercises/bloco_6/dia_1/form.html
+++ b/exercises/bloco_6/dia_1/form.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>        
-        <form id="forms" action="" method="GET" enctype="multipart/form-data">
+        <form id="forms" action="" class="forms" method="GET" enctype="multipart/form-data">
             <fieldset>
                 <label for="name">Nome Completo:</label>
                 <input type="text" name="nome" id="name" maxlength="40" placeholder="Digite seu nome" required>
